--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,81 +1,97 @@
-
 <div class="black"></div>
 <footer class="footer">
-<div class = "container">
-    <div class="row">
-        <div class="col-12">
-        <p> ©2020-2023, Tallam - Информационно-аналитическая платформа</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-12" id="yearby">
+
+            </div>
         </div>
     </div>
-</div>
 </footer>
 
 
 <script>
-let menuButton = document.querySelector(".menu_btn");
+    document.addEventListener('DOMContentLoaded', function () {
+        let getYear = function () {
+            let year = new Date().getFullYear();
+            return `©2020 - ${year}, Tallam - Информационно - аналитическая платформа`;
+        };
 
-menuButton.addEventListener('click', toggleMenu);
+        let yearBlock = document.getElementById('yearby');
 
-function toggleMenu() {
-    let mainNav = document.querySelector('.main_nav');
-    /* let inst = document.querySelector('.header__institution'); */
+        if (yearBlock) {
+            yearBlock.textContent = getYear();
+        }
 
-    menuButton.classList.toggle('menu_btn--active');
-    mainNav.classList.toggle('main_nav--active');
-    /* inst.classList.toggle('header__institution--without_nav'); */
-
-    return false;
-}
+    });
 
 
-let menuItems = document.querySelectorAll('.second_nav__item a');
-let locationIndex = window.location.pathname.lastIndexOf('/');
-let documentLocation = window.location.pathname.slice(locationIndex+1, );
 
-menuItems.forEach(item => {
-    let itemIndex = item.attributes.href.value.lastIndexOf('/');
-    let itemHref = item.attributes.href.value.slice(itemIndex+1, );
-    if(itemHref == documentLocation){
-        item.classList.add('active');
+
+    let menuButton = document.querySelector(".menu_btn");
+
+    /* menuButton.addEventListener('click', toggleMenu); */
+
+    function toggleMenu() {
+        let mainNav = document.querySelector('.main_nav');
+        /* let inst = document.querySelector('.header__institution'); */
+
+        menuButton.classList.toggle('menu_btn--active');
+        mainNav.classList.toggle('main_nav--active');
+        /* inst.classList.toggle('header__institution--without_nav'); */
+
+        return false;
     }
-})
 
 
-let black = document.querySelector('.black');
-let body = document.querySelector('body');
-let modalFeedback = document.querySelector('.modal--feedback');
-let feedbackButton = document.querySelector('.support__button');
-let modalCloseButton = document.querySelector('.modal__cross--feedback');
+    let menuItems = document.querySelectorAll('.second_nav__item a');
+    let locationIndex = window.location.pathname.lastIndexOf('/');
+    let documentLocation = window.location.pathname.slice(locationIndex + 1,);
 
-feedbackButton.addEventListener('click', openModal(modalFeedback));
-modalCloseButton.addEventListener('click', closeModal(modalFeedback));
+    menuItems.forEach(item => {
+        let itemIndex = item.attributes.href.value.lastIndexOf('/');
+        let itemHref = item.attributes.href.value.slice(itemIndex + 1,);
+        if (itemHref == documentLocation) {
+            item.classList.add('active');
+        }
+    })
 
 
-black.addEventListener('click', () => {
-    closeModal(modalFeedback)();
-    closeModal(modal)();
-} );
+    let black = document.querySelector('.black');
+    let body = document.querySelector('body');
+    let modalFeedback = document.querySelector('.modal--feedback');
+    let feedbackButton = document.querySelector('.support__button');
+    let modalCloseButton = document.querySelector('.modal__cross--feedback');
 
-document.addEventListener('keyup', event => {
-    if (event.keyCode === 27) {
+    feedbackButton.addEventListener('click', openModal(modalFeedback));
+    modalCloseButton.addEventListener('click', closeModal(modalFeedback));
+
+
+    black.addEventListener('click', () => {
         closeModal(modalFeedback)();
+        closeModal(modal)();
+    });
+
+    document.addEventListener('keyup', event => {
+        if (event.keyCode === 27) {
+            closeModal(modalFeedback)();
+        }
+    })
+
+    function closeModal(modal) {
+        return function () {
+            modal.style.display = 'none';
+            black.style.display = 'none';
+            body.style.overflow = 'auto';
+        };
     }
-})
 
-function closeModal(modal) {
-    return function(){
-        modal.style.display = 'none';
-        black.style.display = 'none';
-        body.style.overflow= 'auto';
-    };
-}
-
-function openModal(modal) {
-    return function() {
-        modal.style.display = 'block';
-        black.style.display = 'block';
-        body.style.overflow= 'hidden';
-    };
-}
+    function openModal(modal) {
+        return function () {
+            modal.style.display = 'block';
+            black.style.display = 'block';
+            body.style.overflow = 'hidden';
+        };
+    }
 
 </script>
