--- a/views/school_project_single.hbs
+++ b/views/school_project_single.hbs
@@ -13,19 +13,21 @@
             <div class=" col-md-6 col-sm-12 ">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <div class="container-fluid pt-2">
-                        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon "></span>
                         </button>
                         <div class="collapse navbar-collapse   flex-row-reverse  " id="navbarNavDropdown">
-                            <ul class="navbar-nav" >
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link"  href="/school/project">Проекты</a>
+                                    <a class="nav-link" href="/school/project">Проекты</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link"  href="/school/list">Учителя</a>
+                                    <a class="nav-link" href="/school/list">Учителя</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link"  href="/school/support">Помощь</a>
+                                    <a class="nav-link" href="/school/support">Помощь</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/auth/logout">Выйти</a>
@@ -45,7 +47,8 @@
             <div class="col-12">
                 <nav class="second_nav">
                     <ul class="second_nav__items">
-                        <li class="second_nav__item"><a href="/school/project/library/{{project_id}}" id="myBtn" class="second_nav__link"> Добавить учителя в проект</a></li>
+                        <li class="second_nav__item"><a href="/school/project/library/{{project_id}}" id="myBtn"
+                                class="second_nav__link"> Добавить учителя в проект</a></li>
                     </ul>
                 </nav>
             </div>
@@ -54,21 +57,21 @@
             <div class="col-12 ">
                 <div class="section-school-title">
                     {{#if school.length}}
-                        {{#each school}}
-                            <h2 class="main_title text-align-center indent-y-5-m"> {{this.school_name}}</h2>
-                            <h2 class="text-align-center"> Общая информация </h2>
-                            <h4>Проект: {{../project_name}} </h4>
-                            <h4>Город/Район: {{this.title_area}}</h4>
-                        {{/each}}
+                    {{#each school}}
+                    <h2 class="main_title text-align-center indent-y-5-m"> {{this.school_name}}</h2>
+                    <h2 class="text-align-center"> Общая информация </h2>
+                    <h4>Проект: {{../project_name}} </h4>
+                    <h4>Город/Район: {{this.title_area}}</h4>
+                    {{/each}}
                     {{else}}
-                        <h2> Нет данных </h2>
+                    <h2> Нет данных </h2>
                     {{/if}}
 
                     {{#if error}}
-                        <p> {{ error}}</p>
+                    <p> {{ error}}</p>
                     {{/if}}
                     {{#if notice}}
-                        <p> {{ notice}}</p>
+                    <p> {{ notice}}</p>
                     {{/if}}
                 </div>
             </div>
@@ -76,35 +79,38 @@
         <div class="row">
             <div class="col-12">
                 <!-- TABLE FOR STAFF -->
-                <h3 style="text-align: center; margin-bottom:20px; margin-top:45px"> Список учителей участвующих в проекте  </h3>
+                <h3 style="text-align: center; margin-bottom:20px; margin-top:45px"> Список учителей участвующих в
+                    проекте </h3>
                 <div class="wrapper-body table_section table-responsive">
                     <table class="table">
                         <thead>
-                        <tr>
-                            <th scope="col">№</th>
-                            <th scope="col">ФИО (учителя)</th>
-                            <th scope="col">Должность</th>
-                            <th scope="col">Данные пользователя (в проекте)</th>
-                            <th scope="col">Информация о пользователе</th>
-                        </tr>
+                            <tr>
+                                <th scope="col">№</th>
+                                <th scope="col">ФИО (учителя)</th>
+                                <th scope="col">Должность</th>
+                                <th scope="col">Информация о пользователе</th>
+                                <th scope="col">Данные пользователя (в проекте)</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        {{#if teachers}}
+                            {{#if teachers}}
                             {{#each teachers}}
-                                <tr >
-                                    <th scope="row">{{increment @index}}</th>
-                                    <td>  {{surname}} {{firstname}}</td>
-                                    <td>{{title_position}}</td>
+                            <tr>
+                                <th scope="row">{{increment @index}}</th>
+                                <td> {{surname}} {{firstname}}</td>
+                                <td>{{title_position}}</td>
 
-                                     <td class="text-decoration-underline">
-                                        <a href="/school/list/{{id_teacher}}" class="table_section__link_item"> Просмотр</a></td>
-                                    </td>
-                                    <td class="text-decoration-underline">
-                                        <a href="/school/card/project/{{../project_id}}/teacher/{{id_teacher}}" class="table_section__link_item">Профиль в проекте</a>
-                                    </td>
-                                </tr>
+                                <td class="text-decoration-underline">
+                                    <a href="/school/list/{{id_teacher}}" class="table_section__link_item"> Просмотр</a>
+                                </td>
+                                </td>
+                                <td class="text-decoration-underline">
+                                    <a href="/school/card/project/{{../project_id}}/teacher/{{id_teacher}}"
+                                        class="table_section__link_item">Профиль в проекте</a>
+                                </td>
+                            </tr>
                             {{/each}}
-                        {{/if}}
+                            {{/if}}
                         </tbody>
                     </table>
                 </div>
@@ -112,5 +118,3 @@
         </div>
     </div>
 </main>
-
-
