--- a/views/school_cabinet.hbs
+++ b/views/school_cabinet.hbs
@@ -1,4 +1,3 @@
-
 <header>
     <div class="container">
 
@@ -9,11 +8,13 @@
             <div class="col-lg-6 ">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <div class="container-fluid">
-                        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon "></span>
                         </button>
                         <div class="collapse navbar-collapse flex-row-reverse " id="navbarNavDropdown">
-                            <ul class="navbar-nav" >
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="/school/support">Помощь</a>
                                 </li>
@@ -32,21 +33,23 @@
 
 <main class="main_page">
     <div class="container">
-    <div class="row">
-      <div class = "col-12">
-      <div class = "info_block text-align-center">
-         <h3>Уважаемые пользователи портала!</h3>
-{{!--          <p>Информируем Вас о том, что в период с 08:00 26.04.2023 по 08:00 05.0.2023  будут проводиться регламентные работы с целью обновления оценочных карт. В указанный период возможны проблемы с входом в личный кабинет на портале "Таллам". --}}
-{{!--                          Приносим свои извинения за возможные неудобства.</p> --}}
+        <div class="row">
+            <div class="col-12">
+                <div class="info_block text-align-center">
+                    <h3>Уважаемые пользователи портала!</h3>
+                    {{!--          <p>Информируем Вас о том, что в период с 08:00 26.04.2023 по 08:00 05.0.2023  будут проводиться регламентные работы с целью обновления оценочных карт. В указанный период возможны проблемы с входом в личный кабинет на портале "Таллам". --}}
+                    {{!--                          Приносим свои извинения за возможные неудобства.</p> --}}
 
-{{!--          <p>Информируем Вас о том, что в период с 08:00 26.04.2023 по 08:00 25.05.2023 платформа будет находиться на этапе тестирования в связи с обновлением оценочных карт. В указанный период возможны проблемы с входом в личный кабинет на портале "Таллам".</p> --}}
-         <p> Информируем Вас о том, что в период с 08:00 15.05.2023 по 08:00 25.05.2023 будут проводиться технические работы по модернизации платформы, в связи с этим возможны кратковременные перебои. </p>
+                    {{!--          <p>Информируем Вас о том, что в период с 08:00 26.04.2023 по 08:00 25.05.2023 платформа будет находиться на этапе тестирования в связи с обновлением оценочных карт. В указанный период возможны проблемы с входом в личный кабинет на портале "Таллам".</p> --}}
+                    <p> Информируем Вас о том, что в период с 08:00 15.05.2023 по 08:00 25.05.2023 будут проводиться
+                        технические работы по модернизации платформы, в связи с этим возможны кратковременные перебои.
+                    </p>
 
+                </div>
+
+
+            </div>
         </div>
-
-
-       </div>
-    </div>
 
         <div class="row indent-y-2">
             <div class="col-12 text-align-center">
@@ -63,16 +66,31 @@
                         <h2 class="header_text_h2">Добро пожаловать на платформу Tallam!</h2>
                         <h2 class="header_text_h2">Перед началом работы рекомендуем просмотреть видеоинструкцию</h2>
                         {{#if error}}
-                            <h3>{{error}}</h3>
+                        <h3>{{error}}</h3>
                         {{/if}}
                         {{#if notice}}
-                            <h3>{{notice}}</h3>
+                        <h3>{{notice}}</h3>
                         {{/if}}
 
                     </div>
-                    <section class="video">
+                    {{!-- <section class="video">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/TKpa1TanrDE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </section> --}}
+
+                    <section class="video">
+                        {{!-- <iframe width="560" height="315"
+                            src="https://rutube.ru/play/embed/c2a0794e2178ccb8ee412f23d98b747a" frameBorder="0"
+                            allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen
+                            allowFullScreen></iframe> --}}
+
+                        <iframe
+                            src="https://vk.com/video_ext.php?oid=507373353&id=456239211&hd=1&hash=e89d45a428999745&autoplay=1"
+                            width="640" height="360"
+                            allow="autoplay=0; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+                            frameborder="0" allowfullscreen></iframe>
                     </section>
+
+
                 </div>
             </div>
         </div>
@@ -92,6 +110,3 @@
         </div>
     </div>
 </main>
-
-
-    
