--- a/views/support.hbs
+++ b/views/support.hbs
@@ -1,241 +1,263 @@
 <header>
-    <div class="container">
-        <div class="row d-flex align-items-center">
-            <div class=" col-md-6 col-sm-12">
-                <div class="logo">
-                    <a href="/" class="logo__tallam">Tallam</a>
-                    <div>
-                        <h2 class="header__institution" id="header__institution">{{school_name}}</h2>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-md-6 col-sm-12 ">
-                <nav class="navbar navbar-expand-md navbar-light">
-                    <div class="container-fluid pt-2">
-                        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon "></span>
-                        </button>
-                        <div class="collapse navbar-collapse   flex-row-reverse  " id="navbarNavDropdown">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="/school/list">Учителя</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="/school/support">Помощь</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/auth/logout">Выйти</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
+  <div class="container">
+    <div class="row d-flex align-items-center">
+      <div class=" col-md-6 col-sm-12">
+        <div class="logo">
+          <a href="/" class="logo__tallam">Tallam</a>
+          <div>
+            <h2 class="header__institution" id="header__institution">{{school_name}}</h2>
+          </div>
         </div>
+      </div>
+      <div class=" col-md-6 col-sm-12 ">
+        <nav class="navbar navbar-expand-md navbar-light">
+          <div class="container-fluid pt-2">
+            <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon "></span>
+            </button>
+            <div class="collapse navbar-collapse   flex-row-reverse  " id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                {{#if school_name.length}}
+                <li class="nav-item">
+                  <a class="nav-link" href="/school/list">Учителя</a>
+                </li>
+                {{/if}}
+
+                {{#if methodist.length}}
+                <li class="nav-item">
+                  <a class="nav-link" href="/methodist/cabinet/"> Главная</a>
+                </li>
+                {{/if}}
+                <li class="nav-item">
+                  <a class="nav-link" href="/school/support">Помощь</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/auth/logout">Выйти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     </div>
+  </div>
 </header>
 
 <style>
- .accordion {
-  background-color: #c7d9ed;
-  color:#2E609A;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
+  .accordion {
+    background-color: #c7d9ed;
+    color: #2E609A;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
 
-.active, .accordion:hover {
-  background-color: #487BB7;
-  color: white;
-}
+  .active,
+  .accordion:hover {
+    background-color: #487BB7;
+    color: white;
+  }
 
-.panel {
-  padding: 40px 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-  font-size: 1.3em;
-}
+  .panel {
+    padding: 40px 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+    font-size: 1.3em;
+  }
 
-.frequently__tabs ol {
-  margin-left: 15px;
-}
+  .frequently__tabs ol {
+    margin-left: 15px;
+  }
 
-.brand_link_color {
- color:#487BB7;
-}
+  .brand_link_color {
+    color: #487BB7;
+  }
 
-.frequently__tabs ol a {
-  color:#487BB7;
+  .frequently__tabs ol a {
+    color: #487BB7;
 
-}
+  }
 
-.support-body {
+  .support-body {
     width: 100%;
     color: #484343;
-}
+  }
 
-.support-body h2 {
-text-align: center;
-}
+  .support-body h2 {
+    text-align: center;
+  }
 
-.wrapper-support{
+  .wrapper-support {
     max-width: 1250px;
-    margin:0 auto
-}
+    margin: 0 auto
+  }
 
-.support-area form input, textarea {
-  width: 100%;
-  margin: 15px 0;
-}
+  .support-area form input,
+  textarea {
+    width: 100%;
+    margin: 15px 0;
+  }
 
-.support-area form input{
-  border: 1px solid rgba(118, 118, 118, 0.5);
-  padding: 5px 5px;
-}
+  .support-area form input {
+    border: 1px solid rgba(118, 118, 118, 0.5);
+    padding: 5px 5px;
+  }
 
-.support-area form input, textarea {
-  border: 1px solid rgba(118, 118, 118, 0.5);
-}
+  .support-area form input,
+  textarea {
+    border: 1px solid rgba(118, 118, 118, 0.5);
+  }
 
-.support-area form textarea{
-  resize: none;
-}
+  .support-area form textarea {
+    resize: none;
+  }
 
-.support-area form button{
-  padding:8px 22px;
-  float: right;
-  border:none;
-  border-radius: 4px;
-  color:white;
-  background-color: #2E609A;
-}
-.flash {
-  display: none;
-  position: absolute;
-  background-color: #2E609A;
-  color:white;
-  text-align: center;
-  padding: 20px 30px;
-  top:30%;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  width: 500px;
-}
+  .support-area form button {
+    padding: 8px 22px;
+    float: right;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    background-color: #2E609A;
+  }
 
-.support_fileld::placeholder {
-  padding-left: 15px;
-}
-.support_fileld::-webkit-input-placeholder { color: #a0a0a0;}
-.support_fileld:-moz-placeholder:focus {color: #a0a0a0;}
-.support_fileld::-moz-placeholder:focus {color: #a0a0a0;}
-.support_fileld:-ms-input-placeholder:focus {color: #a0a0a0;}
+  .flash {
+    display: none;
+    position: absolute;
+    background-color: #2E609A;
+    color: white;
+    text-align: center;
+    padding: 20px 30px;
+    top: 30%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+  }
 
+  .support_fileld::placeholder {
+    padding-left: 15px;
+  }
+
+  .support_fileld::-webkit-input-placeholder {
+    color: #a0a0a0;
+  }
+
+  .support_fileld:-moz-placeholder:focus {
+    color: #a0a0a0;
+  }
+
+  .support_fileld::-moz-placeholder:focus {
+    color: #a0a0a0;
+  }
+
+  .support_fileld:-ms-input-placeholder:focus {
+    color: #a0a0a0;
+  }
 </style>
-    <section>
-        {{#if error}}
-          <p> {{ error}}</p>
-        {{/if}}
-        {{#if notice}}
-            <div id="notice"></div>
-            <div class="flash"><h3>{{notice}}</h3></div>
-        {{/if}}
-    </section> 
+<section>
+  {{#if error}}
+  <p> {{ error}}</p>
+  {{/if}}
+  {{#if notice}}
+  <div id="notice"></div>
+  <div class="flash">
+    <h3>{{notice}}</h3>
+  </div>
+  {{/if}}
+</section>
 
 
 
 <div class="support-body">
   <div class="wrapper-support">
     <div class="frequently">
-        <h2>Часто задаваемые вопросы</h2>
-        <div class="frequently__tabs">
-                <button class="accordion">Забыл логин и пароль. Что делать?</button>
-                <div class="panel">
-                <p>Логин — это  официальный email адрес вашей образовательной организации . Если вы знаете, какой  email привязан к аккаунту, то вы знаете логин.</p>
-                <p>Если вы забыли пароль, есть два варианта.</p>
-                <ol>
-                  <li>Напишите нам в <a href="https://t.me/nakata_katsu">телеграмм</a></li>
-                  <li>Или отправьте запрос на восстановления пароля на электронный адрес: webrush@mail.ru</li>
-                </ol>
-                </div>
-
-
+      <h2>Часто задаваемые вопросы</h2>
+      <div class="frequently__tabs">
+        <button class="accordion">Забыл логин и пароль. Что делать?</button>
+        <div class="panel">
+          <p>Логин — это официальный email адрес вашей образовательной организации . Если вы знаете, какой email
+            привязан к аккаунту, то вы знаете логин.</p>
+          <p>Если вы забыли пароль, есть два варианта.</p>
+          <ol>
+            <li>Напишите нам в <a href="https://t.me/nakata_katsu">телеграмм</a></li>
+            <li>Или отправьте запрос на восстановления пароля на электронный адрес: webrush@mail.ru</li>
+          </ol>
         </div>
+
+
+      </div>
     </div>
     <h2>Здесь Вы можете задать любой вопрос о <strong>Tallam</strong></h2>
     <div class="support-area">
-        <form action="" method="POST">
-            <input type="text" name="support_title"  class="support_fileld" placeholder="Пожалуйста, опишите тему Вашей проблемы ">
-            <input type="hidden" name="_csrf" value="{{@root.csrf}}" id="token">
-            <textarea name="support_body" id="" cols="30" rows="10" class="support_fileld" placeholder="Пожалуйста, расскажите подробнее о вашей проблеме"></textarea>
+      <form action="" method="POST">
+        <input type="text" name="support_title" class="support_fileld"
+          placeholder="Пожалуйста, опишите тему Вашей проблемы ">
+        <input type="hidden" name="_csrf" value="{{@root.csrf}}" id="token">
+        <textarea name="support_body" id="" cols="30" rows="10" class="support_fileld"
+          placeholder="Пожалуйста, расскажите подробнее о вашей проблеме"></textarea>
 
-            <button type="button"  data-bs-toggle="modal"    id="btn-o" href="#exampleModalToggle" role="button"> Отправить</button>
-        </form>
+        <button type="button" data-bs-toggle="modal" id="btn-o" href="#exampleModalToggle" role="button">
+          Отправить</button>
+      </form>
     </div>
   </div>
 
 </div>
 
 {{!--             модалка   --}}
-        <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalToggleLabel"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body" id="modal-body">
-                    <h3 style="text-align:center">  Уважаемый пользователь! По техническим причинам данный вид связи недоступен. Вы можете задать ваш вопрос в <a class="brand_link_color"href="https://t.me/nakata_katsu">телеграмм</a> или написать на электронную почту: webrush@mail.ru</h3>
-              </div>
+<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel"
+  tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalToggleLabel"></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="modal-body">
+        <h3 style="text-align:center"> Уважаемый пользователь! По техническим причинам данный вид связи недоступен. Вы
+          можете задать ваш вопрос в <a class="brand_link_color" href="https://t.me/nakata_katsu">телеграмм</a> или
+          написать на электронную почту: webrush@mail.ru</h3>
+      </div>
 
 
-              <div class="d-grid gap-2">
-               <button class="btn-main-color"  data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" data-bs-dismiss="modal">Понятно</button>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="d-grid gap-2">
+        <button class="btn-main-color" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal"
+          data-bs-dismiss="modal">Понятно</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 {{!--                 модалка  --}}
 <script>
-var acc = document.getElementsByClassName("accordion");
-var i;
+  var acc = document.getElementsByClassName("accordion");
+  var i;
 
-for (i = 0; i < acc.length; i++) {
-  acc[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if (panel.style.display === "block") {
-      panel.style.display = "none";
-    } else {
-      panel.style.display = "block";
+  for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function () {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.display === "block") {
+        panel.style.display = "none";
+      } else {
+        panel.style.display = "block";
+      }
+    });
+  }
+
+  $(document).ready(function () {
+    if ($("#notice")) {
+      $(".flash").fadeIn(.5).fadeOut(3000)
     }
   });
-}
-
-$( document ).ready(function() {
-  if($("#notice")){
-      $(".flash").fadeIn(.5).fadeOut(3000)
-  }
-});
 </script>
-
-
-
-
-
-
-
-
-   
-
-
-
-    
